refactor: simplify type checks and improve code readability across utility classes and services
Refs: #649